--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -22,7 +22,7 @@ arrow-ipc.workspace = true
 arrow-schema.workspace = true
 async-trait = "0.1"
 auth.workspace = true
-axum.workspace = true
+axum = { workspace = true, features = ["multipart"] }
 axum-macros = "0.3.8"
 base64.workspace = true
 bytes.workspace = true
@@ -69,6 +69,7 @@ opentelemetry-proto.workspace = true
 parking_lot = "0.12"
 pgwire = "0.20"
 pin-project = "1.0"
+pipeline.workspace = true
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
 pprof = { version = "0.13", features = [
     "flamegraph",
