--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -105,6 +105,7 @@ tonic-reflection = "0.11"
 tower = { workspace = true, features = ["full"] }
 tower-http = { version = "0.4", features = ["full"] }
 urlencoding = "2.1"
+uuid.workspace = true
 zstd.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
