--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -16,10 +16,10 @@ workspace = true
 [dependencies]
 aide = { version = "0.9", features = ["axum"] }
 api.workspace = true
-arrow.workspace = true
 arrow-flight.workspace = true
 arrow-ipc.workspace = true
 arrow-schema.workspace = true
+arrow.workspace = true
 async-trait = "0.1"
 auth.workspace = true
 axum = { workspace = true, features = ["multipart"] }
@@ -44,8 +44,8 @@ common-telemetry.workspace = true
 common-time.workspace = true
 common-version = { workspace = true, features = ["codec"] }
 dashmap.workspace = true
-datafusion.workspace = true
 datafusion-common.workspace = true
+datafusion.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures = "0.3"
@@ -96,12 +96,12 @@ snap = "1"
 sql.workspace = true
 strum.workspace = true
 table.workspace = true
-tokio.workspace = true
 tokio-rustls = "0.25"
 tokio-stream = { workspace = true, features = ["net"] }
 tokio-util.workspace = true
-tonic.workspace = true
+tokio.workspace = true
 tonic-reflection = "0.11"
+tonic.workspace = true
 tower = { workspace = true, features = ["full"] }
 tower-http = { version = "0.4", features = ["full"] }
 urlencoding = "2.1"
@@ -136,4 +136,8 @@ common-version.workspace = true
 
 [[bench]]
 name = "bench_prom"
+harness = false
+
+[[bench]]
+name = "to_http_output"
 harness = false
