--- a/src/puffin/Cargo.toml
+++ b/src/puffin/Cargo.toml
@@ -14,6 +14,7 @@ common-error.workspace = true
 common-macro.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
+lz4_flex = "0.11"
 pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
