--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -17,6 +17,7 @@ common-recordbatch.workspace = true
 common-time.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+# sqlness 0.6.0 have a bug causing `cargo sqlness` to fail(see https://github.com/CeresDB/sqlness/issues/68) which is fixed in 0.6.1 
 sqlness = "0.6.1"
 tempfile.workspace = true
 tinytemplate = "1.2"
