--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,18 +68,12 @@ jobs:
 
   sqlness:
     name: Sqlness Test (Basic)
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-20.04 ]
+    runs-on: ubuntu-20.04
     steps:
       - run: 'echo "No action required"'
 
   sqlness-kafka-wal:
     name: Sqlness Test (Remote WAL)
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-20.04 ]
+    runs-on: ubuntu-20.04
     steps:
       - run: 'echo "No action required"'
