--- a/config/frontend.example.toml
+++ b/config/frontend.example.toml
@@ -36,6 +36,9 @@ body_limit = "64MB"
 [grpc]
 ## The address to bind the gRPC server.
 addr = "127.0.0.1:4001"
+## The hostname advertised to the metasrv,
+## and used for connections from outside the host
+hostname = "127.0.0.1"
 ## The number of server worker threads.
 runtime_size = 8
 
