feat(puffin): implement CachedPuffinWriter
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/src/puffin/Cargo.toml
+++ b/src/puffin/Cargo.toml
@@ -8,7 +8,9 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+async-compression = "0.4.11"
 async-trait.workspace = true
+async-walkdir = "2.0.0"
 bitflags.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
@@ -19,7 +21,6 @@ pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
-
-[dev-dependencies]
 tokio.workspace = true
 tokio-util.workspace = true
+uuid.workspace = true
