--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -67,19 +67,11 @@ jobs:
       - run: 'echo "No action required"'
 
   sqlness:
-    name: Sqlness Test (Basic)
+    name: Sqlness Test (${{ matrix.mode.name }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
-    steps:
-      - run: 'echo "No action required"'
-
-  sqlness-kafka-wal:
-    name: Sqlness Test (Remote WAL)
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-20.04 ]
-    steps:
-      - run: 'echo "No action required"'
+        mode:
+          - name: "Basic"
+          - name: "Remote WAL"
