ci: fix docs ci

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -75,3 +75,5 @@ jobs:
         mode:
           - name: "Basic"
           - name: "Remote WAL"
+    steps:
+      - run: 'echo "No action required"'
