--- a/src/puffin/Cargo.toml
+++ b/src/puffin/Cargo.toml
@@ -11,16 +11,23 @@ workspace = true
 async-compression = "0.4.11"
 async-trait.workspace = true
 async-walkdir = "2.0.0"
+base64.workspace = true
 bitflags.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-telemetry.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
 lz4_flex = "0.11"
+moka.workspace = true
 pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2 = "0.10.8"
 snafu.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+common-test-util.workspace = true
