--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -90,3 +90,4 @@ script.workspace = true
 session = { workspace = true, features = ["testing"] }
 store-api.workspace = true
 tokio-postgres = "0.7"
+url = "2.3"
