--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -20,6 +20,7 @@ common-decimal.workspace = true
 common-error.workspace = true
 common-frontend.workspace = true
 common-function.workspace = true
+common-grpc.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
 common-query.workspace = true
