feat: add build info for flow heartbeat

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -26,6 +26,7 @@ common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
+common-version.workspace = true
 datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
