--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -14,6 +14,7 @@ async-recursion = "1.0"
 async-trait.workspace = true
 bytes.workspace = true
 catalog.workspace = true
+client.workspace = true
 common-base.workspace = true
 common-config.workspace = true
 common-decimal.workspace = true
