--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -15,10 +15,12 @@ async-trait.workspace = true
 bytes.workspace = true
 catalog.workspace = true
 common-base.workspace = true
+common-config.workspace = true
 common-decimal.workspace = true
 common-error.workspace = true
 common-frontend.workspace = true
 common-function.workspace = true
+common-grpc.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
 common-query.workspace = true
