chore: get env cfg variables

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ GT_MYSQL_ADDR = localhost:4002
 # Setting for unstable fuzz tests
 GT_FUZZ_BINARY_PATH=/path/to/
 GT_FUZZ_INSTANCE_ROOT_DIR=/tmp/unstable_greptime
+GT_FUZZ_INPUT_MAX_ROWS=2048
+GT_FUZZ_INPUT_MAX_TABLES=32
+GT_FUZZ_INPUT_MAX_COLUMNS=32
+GT_FUZZ_INPUT_MAX_ALTER_ACTIONS=256
+GT_FUZZ_INPUT_MAX_INSERT_ACTIONS=8
