--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -20,11 +20,13 @@ fst.workspace = true
 futures.workspace = true
 greptime-proto.workspace = true
 mockall.workspace = true
+moka = { workspace = true, features = ["sync", "future"] }
 pin-project.workspace = true
 prost.workspace = true
 regex.workspace = true
 regex-automata.workspace = true
 snafu.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
