--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -20,12 +20,14 @@ fst.workspace = true
 futures.workspace = true
 greptime-proto.workspace = true
 mockall.workspace = true
+moka = { workspace = true, features = ["sync", "future"] }
 pin-project.workspace = true
 prost.workspace = true
 regex.workspace = true
 regex-automata.workspace = true
 serde.workspace = true
 snafu.workspace = true
+uuid.workspace = true
 tantivy = { version = "0.22", features = ["zstd-compression"] }
 tantivy-jieba = "0.11.0"
 tokio.workspace = true
