--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -22,6 +22,7 @@ greptime-proto.workspace = true
 mockall.workspace = true
 moka = { workspace = true, features = ["sync", "future"] }
 pin-project.workspace = true
+prometheus.workspace = true
 prost.workspace = true
 regex.workspace = true
 regex-automata.workspace = true
