feat: add failover test for metric table

--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -129,6 +129,13 @@ bench = false
 doc = false
 
 [[bin]]
+name = "fuzz_failover_metric_regions"
+path = "targets/failover/fuzz_failover_metric_regions.rs"
+test = false
+bench = false
+doc = false
+
+[[bin]]
 name = "fuzz_migrate_mito_regions"
 path = "targets/migration/fuzz_migrate_mito_regions.rs"
 test = false
