fix: prepare inserting with column defaults not work, #4244

--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -22,6 +22,7 @@ common-macro.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datafusion-common.workspace = true
+datafusion-expr.workspace = true
 enum_dispatch = "0.3"
 num = "0.4"
 num-traits = "0.2"
