refactor(inverted_index): integrate puffin manager for build
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -454,6 +454,9 @@ apply_on_query = "auto"
 ## Setting to empty will disable external sorting, forcing all sorting operations to happen in memory.
 mem_threshold_on_create = "64M"
 
+## Whether to compress the inverted index data.
+compress = true
+
 ## Deprecated, use `region_engine.mito.index.aux_path` instead.
 intermediate_path = ""
 
