--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -453,7 +453,7 @@ apply_on_query = "auto"
 ## Memory threshold for performing an external sort during index creation.
 ## - `auto`: automatically determine the threshold based on the system memory size (default)
 ## - `unlimited`: no memory limit
-## - `[size]`: e.g. `64MB`, fixed memory threshold
+## - `[size]` e.g. `64MB`: fixed memory threshold
 mem_threshold_on_create = "auto"
 
 ## Deprecated, use `region_engine.mito.index.aux_path` instead.
