feat: use `Inserter` as Frontend

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -47,6 +47,8 @@ meta-client.workspace = true
 minstant = "0.1.7"
 nom = "7.1.3"
 num-traits = "0.2"
+operator.workspace = true
+partition.workspace = true
 prost.workspace = true
 query.workspace = true
 serde.workspace = true
