--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -16,6 +16,7 @@ tokio-console = ["common-telemetry/tokio-console"]
 workspace = true
 
 [dependencies]
+api.workspace = true
 async-trait.workspace = true
 auth.workspace = true
 base64.workspace = true
@@ -28,6 +29,7 @@ common-base.workspace = true
 common-catalog.workspace = true
 common-config.workspace = true
 common-error.workspace = true
+common-frontend.workspace = true
 common-grpc.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
