--- a/tests/conf/metasrv-test.toml.template
+++ b/tests/conf/metasrv-test.toml.template
@@ -6,5 +6,5 @@ provider = "kafka"
 broker_endpoints = {kafka_wal_broker_endpoints | unescaped}
 num_topics = 64
 selector_type = "round_robin"
-name_prefix = "distributed_test_greptimedb_wal_topic"
+topic_name_prefix = "distributed_test_greptimedb_wal_topic"
 {{ endif }}
