chore: cliff now we have nightly tag with nightly word

--- a/cliff.toml
+++ b/cliff.toml
@@ -118,7 +118,7 @@ filter_commits = false
 # regex for skipping tags
 # skip_tags = ""
 # regex for ignoring tags
-ignore_tags = ".*-nightly-.*"
+ignore_tags = ".*-.*|"
 # sort the tags topologically
 topo_order = false
 # sort the commits inside sections by oldest/newest order
