refactor: add get_storage_path() and get_catalog_and_schema()

--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -30,4 +30,5 @@ tokio.workspace = true
 
 [dev-dependencies]
 async-stream.workspace = true
+common-meta.workspace = true
 serde_json.workspace = true
