feat(WIP): added FlowService to QueryEngine

--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -23,6 +23,8 @@ common-time.workspace = true
 common-version.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
+futures.workspace = true
+futures-util.workspace = true
 num = "0.4"
 num-traits = "0.2"
 once_cell.workspace = true
