--- a/src/meta-srv/Cargo.toml
+++ b/src/meta-srv/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [features]
 mock = []
+pg_kvbackend = ["dep:tokio-postgres"]
 
 [lints]
 workspace = true
@@ -13,6 +14,7 @@ workspace = true
 [dependencies]
 api.workspace = true
 async-trait = "0.1"
+clap.workspace = true
 client.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
@@ -52,6 +54,7 @@ snafu.workspace = true
 store-api.workspace = true
 table.workspace = true
 tokio.workspace = true
+tokio-postgres = { workspace = true, optional = true }
 tokio-stream = { workspace = true, features = ["net"] }
 toml.workspace = true
 tonic.workspace = true
