--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -90,5 +90,5 @@ rand.workspace = true
 script.workspace = true
 session = { workspace = true, features = ["testing"] }
 store-api.workspace = true
-tokio-postgres = "0.7"
+tokio-postgres = { workspace = true }
 url = "2.3"
