feat: introduce new kafka topic consumer respecting WAL index

--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -27,6 +27,7 @@ common-wal.workspace = true
 futures.workspace = true
 futures-util.workspace = true
 lazy_static.workspace = true
+pin-project.workspace = true
 prometheus.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
@@ -36,6 +37,7 @@ serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 tokio.workspace = true
+itertools.workspace=true
 
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
